[WTF] Attach WARN_UNUSED_RETURN to makeScopeExit and fix existing wrong usage https://bugs.webkit.org/show_bug.cgi?id=208162

Reviewed by Robin Morisset.

Source/JavaScriptCore:

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseUnaryExpression):

Source/WebCore:

* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::process):

Source/WTF:

We should hold ScopeExit to call destructor when we exit from the scope actually.
Putting WARN_UNUSED_RETURN to fix existing misuse.

* wtf/Scope.h:

Canonical link: https://commits.webkit.org/221108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257285 268f45cc-cd09-0410-ab3c-d52691b4dbfc